Rfx responsive improvements

--- a/src/app/views/recordable-subjects/no-property/no-property-editor.component.html
+++ b/src/app/views/recordable-subjects/no-property/no-property-editor.component.html
@@ -7,7 +7,7 @@
 
     <div fxLayout="row" fxLayout.lt-md="column">
 
-      <div fxFlex="290px">
+      <div fxFlex="290px" fxFlex.lt-md="none">
         <label>Folio electrónico:</label>
 
         <div fxLayout="row">
@@ -30,7 +30,7 @@
 
     <div fxLayout="row" fxLayout.lt-md="column">
 
-      <div fxFlex="290px">
+      <div fxFlex="290px" fxFlex.lt-md="none">
         <label>Tipo:</label>
         <emp-ng-select
           [formControlName]="controls.kind"
