Rfx change some label texts

--- a/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
+++ b/src/app/views/recordable-subjects/instrument/instrument-editor.component.html
@@ -212,7 +212,7 @@
 
       <div [fxFlex]="100/3" fxLayoutAlign="center center" *ngIf="showStatusField && editionMode">
 
-          <span style="padding-right: 0.5rem;">Marcar la inscripción como:</span>
+          <span class="pr-1">Marcar la inscripción como:</span>
 
           <emp-ng-select
             [formControlName]="controls.status"
