--- a/src/app/views/recordable-subjects/no-property/no-property-editor.component.html
+++ b/src/app/views/recordable-subjects/no-property/no-property-editor.component.html
@@ -77,7 +77,7 @@
 
         <ng-container>
 
-          <span style="padding-right: 0.5rem;">Marcar como:</span>
+          <span class="pr-1">{{editionMode ? 'Marcar como:' : 'Marcado como:'}}</span>
 
           <emp-ng-select
             [formControlName]="controls.status"
