--- a/src/app/views/recordable-subjects/real-estate/real-estate-editor.component.html
+++ b/src/app/views/recordable-subjects/real-estate/real-estate-editor.component.html
@@ -131,7 +131,7 @@
 
         <ng-container>
 
-          <span style="padding-right: 0.5rem;">Marcar el predio como:</span>
+          <span class="pr-1">{{editionMode ? 'Marcar el predio como:' : 'Marcado como:'}}</span>
 
           <emp-ng-select
             [formControlName]="controls.status"
