--- a/src/app/views/registration/recording-acts/recording-act-editor.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-editor.component.html
@@ -107,7 +107,7 @@
 
         <div [fxFlex]="100/3" fxLayoutAlign="center center">
 
-          <span style="padding-right: 0.5rem;">Marcar como:</span>
+          <span class="pr-1">{{editionMode ? 'Marcar como:' : 'Marcado como:'}}</span>
 
           <emp-ng-select
             [formControlName]="controls.status"
