--- a/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
+++ b/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
@@ -13,7 +13,7 @@
       <td mat-cell *matCellDef="let row; let i = index;"> <strong>{{i + 1}}</strong> </td>
     </ng-container>
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Acto jurídico </th>
+      <th mat-header-cell *matHeaderCellDef class="nowrap"> Acto jurídico </th>
       <td mat-cell *matCellDef="let row">
         <a class="link" (click)="onOpenRecordingActEditor(row)">
           {{ row.description }}
