--- a/src/app/views/registration/recording-book/book-entry-edition.component.html
+++ b/src/app/views/registration/recording-book/book-entry-edition.component.html
@@ -1,11 +1,17 @@
 <emp-ng-card
   [title]="cardTitle"
   [hint]="cardHint"
+  [disableClose]="primaryEditor"
+  [showCardHeaderFlat]="primaryEditor"
   (cardClose)="onClose()">
 
-  <div class="card-body-padding" [style.height.%]="98" [empNgSpinnerHost]="spinner">
+  <div [empNgSpinnerHost]="spinner"
+    [style.height.%]="98"
+    [style.padding]="primaryEditor ? '16px' : '0 16px 16px 16px'">
 
-    <emp-ng-spinner #spinner [visible]="isLoading"></emp-ng-spinner>
+    <emp-ng-spinner #spinner [visible]="isLoading">
+
+    </emp-ng-spinner>
 
     <emp-land-book-entry-editor
       [actions]="instrumentRecording.actions"
