--- a/src/app/views/search-services/recordable-subjects-searcher/recordable-subjects-searcher.component.html
+++ b/src/app/views/search-services/recordable-subjects-searcher/recordable-subjects-searcher.component.html
@@ -7,7 +7,7 @@
       <div class="card-header card-header-flat">
 
         <div class="card-title">
-          Buscador de folios electrónicos
+          Búsqueda de propiedades
 
           <div class="card-hint" empNgProgressText
             loadingText="Cargando"
