--- a/src/app/main-layout/toolbar/toolbar.component.html
+++ b/src/app/main-layout/toolbar/toolbar.component.html
@@ -2,7 +2,7 @@
 
   <button *empNgHasPermission="permissions.MODULE_SEARCH_RECORDABLE_SUBJECTS"
     class="toolbar-item"
-    title="Buscador de folios electrónicos"
+    title="Buscador de propiedades"
     [ngClass]="{'activate': toolSelected === 'SearchRecordableSubject'}"
     (click)="onToolClicked('SearchRecordableSubject')">
 
