--- a/src/app/views/registration/recordable-subject/recordable-subject-tabbed-view.component.html
+++ b/src/app/views/registration/recordable-subject/recordable-subject-tabbed-view.component.html
@@ -28,7 +28,7 @@
 
     </mat-tab>
 
-    <mat-tab label="Tracto">
+    <mat-tab label="Historia registral">
 
       <emp-land-recordable-subject-history
         [tractIndex]="tractIndex"
