--- a/src/app/views/registration/recording-acts/recording-act-creator.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-creator.component.html
@@ -143,7 +143,7 @@
             [ngModelOptions]="{standalone: true}"
             (change)="onBookEntryCheckChanged()"
             style="display: block; margin-top: -3px;">
-            Nueva inscripción
+            Agregar inscripción
           </mat-checkbox>
 
           <emp-land-recording-views-buttons fxlayout="row">
