--- a/src/app/views/registration/recording-book/book-entry-editor.component.html
+++ b/src/app/views/registration/recording-book/book-entry-editor.component.html
@@ -4,7 +4,7 @@
 
     <div [fxFlex]="100/3">
       <div fxFlex="190px">
-        <label>Número de la inscripción a agregar:</label>
+        <label>Número de inscripción:</label>
         <input autocomplete="off" [formControlName]="controls.recordingNo" type="text" class="text-box"
           style="width: 100px;" [class.invalid-control]="formHandler.getControl(controls.recordingNo).invalid">
       </div>
