--- a/src/app/views/search-services/tract-index-explorer/tract-index-entries-table.component.html
+++ b/src/app/views/search-services/tract-index-explorer/tract-index-entries-table.component.html
@@ -2,40 +2,39 @@
 
   <table mat-table [dataSource]="dataSource">
 
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Nombre </th>
+    <ng-container matColumnDef="rowIndex">
+      <th mat-header-cell *matHeaderCellDef> # </th>
+      <td mat-cell *matCellDef="let row; let i = index;"> <strong>{{i + 1}}</strong> </td>
+    </ng-container>
+
+    <ng-container matColumnDef="issuedAndRequestedTime">
+      <th mat-header-cell *matHeaderCellDef> Registrado el </th>
+      <td mat-cell *matCellDef="let row" class="nowrap">
+        R: {{ row.issueTime | dateTimeFormat }}
+        <br>
+        P: {{ row.requestedTime | dateTimeFormat }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="recordingAct">
+      <th mat-header-cell *matHeaderCellDef> Acto jurídico </th>
       <td mat-cell *matCellDef="let row">{{row.description}}</td>
     </ng-container>
 
-    <ng-container matColumnDef="documentID">
-      <th mat-header-cell *matHeaderCellDef> Documento / Registro </th>
-      <td mat-cell *matCellDef="let row" class="nowrap">
-        <div [style.height.px]="15" [style.marginBottom.px]="8">
-          <a *ngIf="!!row.officialDocument.documentID" class="link">
-            {{row.officialDocument.documentID ?? '-'}}
-          </a>
-          <span *ngIf="!row.officialDocument.documentID">-</span>
-        </div>
-        {{row.requestedTime | dateTimeFormat}}
+    <ng-container matColumnDef="subjectChanges">
+      <th mat-header-cell *matHeaderCellDef> Sobre </th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.subjectChanges.summary }}
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="transactionID">
-      <th mat-header-cell *matHeaderCellDef> Trámite / Presentación </th>
-      <td mat-cell *matCellDef="let row" class="nowrap">
-        <div [style.height.px]="15" [style.marginBottom.px]="8">
-          <a *ngIf="!!row.transaction.transactionID" class="link">
-            {{row.transaction.transactionID}}
-          </a>
-          <span *ngIf="!row.transaction.transactionID">-</span>
-        </div>
-        {{row.issueTime | dateTimeFormat}}
+    <ng-container matColumnDef="recordLink">
+      <th mat-header-cell *matHeaderCellDef> Registrado en </th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.officialDocument.description }}
+        <br />
+        <b>{{row.status}}</b>
       </td>
-    </ng-container>
-
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Estado </th>
-      <td mat-cell *matCellDef="let row"><span class="tag-info nowrap">{{row.status}}</span></td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true;"></tr>
