--- a/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
+++ b/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
@@ -16,9 +16,9 @@
     <ng-container matColumnDef="issuedAndRequestedTime">
       <th mat-header-cell *matHeaderCellDef> Registrado el </th>
       <td mat-cell *matCellDef="let row" class="nowrap">
-        R: {{ row.issueTime | dateTimeFormat }}
+        R: {{ row.recordingData.recordingTime | dateTimeFormat }}
         <br>
-        P: {{ row.requestedTime | dateTimeFormat }}
+        P: {{ row.recordingData.presentationTime | dateTimeFormat }}
       </td>
     </ng-container>
 
@@ -26,15 +26,15 @@
       <th mat-header-cell *matHeaderCellDef class="nowrap"> Acto jurídico </th>
       <td mat-cell *matCellDef="let row">
         <a class="link" (click)="onOpenRecordingActEditor(row)">
-          {{ row.description }}
+          {{ row.name }}
         </a>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="subjectChanges">
-      <th mat-header-cell *matHeaderCellDef> Sobre </th>
+      <th mat-header-cell *matHeaderCellDef> Descripción </th>
       <td mat-cell *matCellDef="let row">
-        {{ row.subjectChanges.summary }}
+        {{ row.description }}
       </td>
     </ng-container>
 
@@ -42,7 +42,7 @@
       <th mat-header-cell *matHeaderCellDef> Registrado en </th>
       <td mat-cell *matCellDef="let row">
         <a class="link" (click)="onOpenBookEntry(row)">
-          {{ row.officialDocument.description }}
+          {{ row.recordingData.description }}
         </a>
       </td>
     </ng-container>
@@ -115,7 +115,7 @@
 
 
 <emp-land-recording-act-edition-modal *ngIf="displayRecordingActEdition"
-  [instrumentRecordingUID]="tractIndexEntrySelected.officialDocument.uid"
+  [instrumentRecordingUID]="tractIndexEntrySelected.recordingData.uid"
   [recordingActUID]="tractIndexEntrySelected.uid"
   [readonly]="!tractIndexEntrySelected.actions.canBeUpdated"
   (recordingActEditionModalEvent)="onRecordingActEditionModalEvent($event)">
