--- a/src/app/views/search-services/tract-index-explorer/tract-index-entries-table.component.html
+++ b/src/app/views/search-services/tract-index-explorer/tract-index-entries-table.component.html
@@ -10,28 +10,28 @@
     <ng-container matColumnDef="issuedAndRequestedTime">
       <th mat-header-cell *matHeaderCellDef> Registrado el </th>
       <td mat-cell *matCellDef="let row" class="nowrap">
-        R: {{ row.issueTime | dateTimeFormat }}
+        R: {{ row.recordingData.recordingTime | dateTimeFormat }}
         <br>
-        P: {{ row.requestedTime | dateTimeFormat }}
+        P: {{ row.recordingData.presentationTime | dateTimeFormat }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="recordingAct">
       <th mat-header-cell *matHeaderCellDef> Acto jurídico </th>
-      <td mat-cell *matCellDef="let row">{{row.description}}</td>
+      <td mat-cell *matCellDef="let row">{{row.name}}</td>
     </ng-container>
 
     <ng-container matColumnDef="subjectChanges">
-      <th mat-header-cell *matHeaderCellDef> Sobre </th>
+      <th mat-header-cell *matHeaderCellDef> Descripción </th>
       <td mat-cell *matCellDef="let row">
-        {{ row.subjectChanges.summary }}
+        {{ row.description }}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="recordLink">
       <th mat-header-cell *matHeaderCellDef> Registrado en </th>
       <td mat-cell *matCellDef="let row">
-        {{ row.officialDocument.description }}
+        {{ row.recordingData.description }}
         <br />
         <b>{{row.status}}</b>
       </td>
