--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -107,3 +107,20 @@
     border: 1px solid $border-color;
   }
 }
+
+.card-floating-container {
+  background-color: $white;
+  border: 1px solid $border-color-light;
+  height: calc(100% - 10px) !important;
+  margin-top: 10px;
+
+  .card-floating-primary.card,
+  .card-floating-primary > .card {
+    margin: -10px -10px 0 10px;
+  }
+
+  .card-floating-secondary.card,
+  .card-floating-secondary > .card {
+    margin: -10px 0 0 -10px;
+  }
+}
