--- a/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
+++ b/src/app/workspaces/historic-registration/historic-registration-workspace.component.html
@@ -7,7 +7,6 @@
 
     <emp-land-file-viewer
       [fileViewerData]="selectedFileViewerData"
-      [showCloseButton]="true"
       (closeEvent)="onCloseFileViewer()">
 
     </emp-land-file-viewer>
@@ -27,8 +26,8 @@
 
   <div *ngIf="displayBookEntryEdition"
     class="secondary"
-    [fxHide]="displayRecordableSubjectTabbedView || displayRecordingActEditor"
-    [fxHide.lt-lg]="displayRecordableSubjectTabbedView || displayFileViewer || displayRecordingActEditor">
+    [fxHide]="displayRegistryEntryEditor"
+    [fxHide.lt-lg]="displayRegistryEntryEditor || displayFileViewer">
 
     <emp-land-book-entry-edition #bookEntryEdition
       [recordingBookUID]="selectedBookEntry.recordingBookUID"
@@ -40,29 +39,14 @@
 
   </div>
 
-  <div *ngIf="displayRecordableSubjectTabbedView"
+  <div *ngIf="displayRegistryEntryEditor"
     class="secondary">
 
-    <emp-land-recordable-subject-tabbed-view
-      [instrumentRecordingUID]="selectedRecordingContext.instrumentRecordingUID"
-      [recordingActUID]="selectedRecordingContext.recordingActUID"
-      [canEditRecordableSubject]="selectedRecordingContext.actions.can.editRecordableSubject"
-      (recordableSubjectTabbedViewEvent)="onRecordableSubjectTabbedViewEvent($event)">
+    <emp-land-registry-entry-editor
+      [data]="selectedRegistryEntryData"
+      (registryEntryEditorEvent)="onRegistryEntryEditorEvent($event)">
 
-    </emp-land-recordable-subject-tabbed-view>
-
-  </div>
-
-  <div *ngIf="displayRecordingActEditor"
-    class="secondary">
-
-    <emp-land-recording-act-edition
-      [instrumentRecordingUID]="selectedRecordingContext.instrumentRecordingUID"
-      [recordingActUID]="selectedRecordingContext.recordingActUID"
-      [readonly]="!selectedRecordingContext.actions.can.editRecordableSubject"
-      (recordingActEditionEventType)="onRecordingActEditionEventType($event)">
-
-    </emp-land-recording-act-edition>
+    </emp-land-registry-entry-editor>
 
   </div>
 
