--- a/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
+++ b/src/app/views/registration/recordable-subject/recordable-subject-history.component.html
@@ -2,7 +2,7 @@
 
 <div class="tab-container scrollable-container mat-elevation-z1" [empNgSpinnerHost]="spinner">
 
-  <emp-ng-spinner #spinner [visible]="submitted">
+  <emp-ng-spinner #spinner [visible]="submitted || isLoading ">
 
   </emp-ng-spinner>
 
