--- a/src/app/views/registration/recording-acts/recording-acts-list.component.html
+++ b/src/app/views/registration/recording-acts/recording-acts-list.component.html
@@ -9,7 +9,7 @@
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef class="nowrap"> Acto jurídico </th>
       <td mat-cell *matCellDef="let row">
-        <a class="link" (click)="onOpenRecordingActEditor(row.recordableSubject.recordingContext)">
+        <a class="link" (click)="onOpenRecordingActEditor(row)">
           {{ row.name }}
         </a>
       </td>
@@ -17,12 +17,12 @@
     <ng-container matColumnDef="electronicID">
       <th mat-header-cell *matHeaderCellDef> Folio electrónico </th>
       <td mat-cell *matCellDef="let row" [style.width.px]="170">
-        <a class="link" (click)="onOpenRecordableSubjectTabbedView(row.recordableSubject.recordingContext)">
+        <a class="link" (click)="onOpenRecordableSubjectTabbedView(row, false)">
           {{ row.recordableSubject.electronicID }}
         </a>
         <ng-container *ngIf="displayRelatedSubject(row.relatedSubject)">
           <br><br> <strong>Fracción de:</strong> <br>
-          <a class="link" (click)="onOpenRecordableSubjectTabbedView(row.relatedSubject.recordingContext)">
+          <a class="link" (click)="onOpenRecordableSubjectTabbedView(row, true)">
             {{ row.relatedSubject.electronicID }}
           </a>
         </ng-container>
@@ -73,7 +73,7 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns;"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
